@@ -203,6 +203,20 @@ drwxr-xr-x 45 user user 8192 2010-08-23 21:58 ..
 -rw-r--r--  1 root root  187 2010-08-23 20:57 settings.conf
 user@xbmcdev:~/.MakeMKV$ 
 
+On my personal notebook this file looks like here .....
+
+user@xbmcdev:~/.MakeMKV$ cat settings.conf 
+#
+# MakeMKV settings file, written by MakeMKV v1.6.1 linux(x86-release)
+#
+
+app_Key = "T-Sitx5LxEXqP3UVcXWEbszE4Aj24b2k1XXGvAWFqXb5P11X42ECO_e2UpLcjS^6EaS@"
+app_UpdateLastCheck = "14882"
+
+user@xbmcdev:~/.MakeMKV$ 
+
+Of course the above key is not valid for makemkv.
+
 Pleas do not try to remove the makemkv files and reinstall them.
 
 If your licence key is expired you see the following message inside the addon
@@ -225,6 +239,8 @@ If your licence key is expired you see the following message inside the addon
   user.
   
   http://code.google.com/p/swiss-army-knife/wiki/LinuxShell
+
+- To collect all logs that are needed I created a little tool inside the tool folder.
 
 6.3 Feedback 
 
@@ -259,7 +275,7 @@ the following:
 - All audio languages from the track will be converted 
 - The produced file will be stored by default on the directory /dvdrip/bluray  
 
-If you would like more controll where to store the file you must use the expert-mode.
+If you would to have more controll where to store the file you must use the expert-mode.
 
 
 2. Transcode DVD
@@ -286,8 +302,10 @@ What format you chose is up to you .....
 If you like a 1:1 copy select iso
 If you wish a high quality take h264-high
 If the rip should be very fast take h264-low
+If you like to watch a dvd with huble-teleskop use psp :-) 
  
 By default I set the transcode profile to h264-high.
+
 
 7.O Using the addon and have fun 
 
